2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mq.h: New file.
	* lib/mqrt.def: (MQ*): Define a few missing functions.

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* lib/mqrt.def: New file.
	Needs the mq.h file to work properly, working on it.
	Thanks to:    Pascal Obry <pobry at users dot sf dot net>

2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winerror.h (STG_E_*):  Define.
	Thanks to:    Oliver Stoeneberg <kidkat at users dot sf dot net>
	* include/winerror.h (STG_S_*): Define.
	(CO_S_MACHINENAMENOTFOUND): Define.
	(RPC_E_*): Define.
	(NTE_*): Define.

2006-04-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/commctrl.h (ListView_*):  Define and correct.
	(LVM_*): Define.

2006-04-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (WM_IME_*): Define (DWORD type).
	(EM_*IMESTATUS): Define.
	(WM_*): Define.
	(XBUTTON*): Define.
	Thanks to:    Steve Folly <spfolly at users dot sf dot net>

2006-03-31  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnetwk.h (WNetGetResourceInformationW):  Correct first param.
	Thanks to: Rene Rivera  <grafik at users dot sf dot net>

2006-03-29  Christopher Faylor  <cgf@timesys.com>

	* include/winspool.h: Protect use of PRINTER_ENUM_VALUESW with proper
	version conditional.

2006-03-29  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winspool.h (JOB_INFO_3): Add structure.
	(PROVIDOR_INFO_*{AW}): Add structure.
	* include/winspool.h [_WIN32_WINNT >= 0x0500]
	(PRINTER_ENUM_VALUES{AW}): Add structure.
	(PRINTPROCESSOR_CAPS): Add structure.

2006-03-29  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winspool.h [_WIN32_WINNT >= 0x0500]
	(PRINTER_INFO_7A): Correct definition.

2006-03-29  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winspool.h [_WIN32_WINNT >= 0x0500]
	(DRIVER_INFO_*{AW}): Add structure.