@@ -1,7 +1,15 @@
 2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
 
+	* include/winbase.h (LOGON32_PROVIDER_WINNT40,
+	LOGON32_PROVIDER_WINNT50, LOGON32_LOGON_NETWORK,
+	LOGON32_LOGON_UNLOCK, LOGON32_LOGON_NETWORK_CLEARTEXT,
+	LOGON32_LOGON_NEW_CREDENTIALS): Define.
+	Thanks to:    Oliver Stoeneberg <kidkat at users dot sf dot net>
+
+2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
+
 	* include/mq.h: New file.
-	* lib/mqrt.def: (MQ*): Define a few missing functions.
+	* lib/mqrt.def (MQ*): Define a few missing functions.
 
 2006-04-05  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
 
